Revert "try z-index fix"
This reverts commit 52e918168014401374d7b5018a0fe92d054c822e.

--- a/styles.css
+++ b/styles.css
@@ -311,9 +311,6 @@ Calendars
     text-align: center;
     overflow-x: scroll;
 }
-.calendarWrapper iframe {
-    z-index: 1;
-}
 /* ------- 
 Video Background 
 --------- */
